[package]
name = "markdown-editor"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
tauri = { version = "1.7.1", features = [
    "fs-write-file",
    "fs-read-file",
    "dialog-open",
    "shell-open",
] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
reqwest = { version = "0.12.5", features = ["blocking", "rustls-tls"] }
tokio = { version = "1.39.2", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
